BUG: v4skin | folderview -> if a foldereview was opened in a dialog, some bottons moved out of the viewport, makeing them unclickable

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -104,10 +104,6 @@ body {
 
     &.dialogBody {
         padding: 0;
-
-        #content {
-            padding: 0 15px 0 0;
-        }
     }
 
 
@@ -960,6 +956,12 @@ footer {
         .form-opener {
             vertical-align: top;
             padding: 7px 0 0 0;
+
+
+            @media (max-width: @screen-sm-min) {
+                padding: 7px 15px 0 15px;
+
+            }
         }
 
     }
